<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开即可刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在加载…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="app_name">内涵段子</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="tip">提示</string>
    <string name="start">开始</string>
    <string name="back">返回</string>
    <string name="ssl_cancel">取消</string>
    <string name="ssl_notify_avail_ticker">发现%1$s新版本%2$s</string>
    <string name="ssl_notify_ready_ticker">%1$s新版本%2$s下载完毕</string>
    <string name="ssl_notify_download_fmt">%1$s 最新版本%2$s</string>
    <string name="ssl_notify_ready_fmt">已下载新版本%1$s,点击安装</string>
    <string name="ssl_notify_avail_fmt">发现新版本%1$s,点击查看</string>
    <string name="ssl_download_fail">下载更新失败</string>
    <string name="ssl_update_title">应用更新</string>
    <string name="ssl_update_avail_fmt">%1$s有最新版本%2$s</string>
    <string name="ssl_update_downloading_fmt">%1$s%2$s正在下载中</string>
    <string name="ssl_update_ready_fmt">%1$s%2$s已经下载</string>
    <string name="ssl_update_whatsnew">此版本的更新记录：</string>
    <string name="ssl_update_none">%1$s无可用更新</string>
    <string name="ssl_update_update">更新</string>
    <string name="ssl_update_back">返回</string>
    <string name="ssl_update_stop">停止</string>
    <string name="ssl_update_install">安装</string>
    <string name="ssl_update_redownload">重新下载</string>
    <string name="ssl_update_unknown_size">(总大小未知)</string>
    <string name="umeng_common_action_info_exist">正在下载中.</string>
    <string name="umeng_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="umeng_common_action_pause">暂停</string>
    <string name="umeng_common_action_continue">继续</string>
    <string name="umeng_common_action_cancel">取消</string>
    <string name="umeng_common_download_notification_prefix">正在下载:</string>
    <string name="umeng_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_common_download_failed">下载失败</string>
    <string name="download_unknown_title">&lt;未命名></string>
    <string name="notification_download">下载</string>
    <string name="notification_downloading">正在下载</string>
    <string name="notification_download_pause">暂停</string>
    <string name="notification_download_resume">继续</string>
    <string name="notification_download_install">安装</string>
    <string name="notification_download_open">打开</string>
    <string name="notification_download_complete">下载完成，点击安装。</string>
    <string name="notification_download_complete_open">下载完成，点击打开。</string>
    <string name="notification_download_failed">下载失败。</string>
    <string name="notification_download_space_failed">SdCard空间不足, 下载失败。</string>
    <string name="notification_download_restart">重新下载</string>
    <string name="notification_download_delete">确认要删除%s的下载任务吗？</string>
    <string name="notification_need_wifi_for_size">文件过大，需要通过 WLAN 下载。</string>
    <string name="notification_paused_in_background">已在后台暂停。</string>
    <string name="wifi_required_title">文件太大，不适于通过运营商网络下载</string>
    <string name="wifi_required_body" formatted="false">"您必须使用 WLAN 完成此内容 (%s ) 的下载。

触摸“%s ”可在下次连接到 WLAN 网络时开始下载此内容。"</string>
    <string name="wifi_recommended_title">稍后再加入下载队列吗？</string>
    <string name="wifi_recommended_body" formatted="false">"立即开始下载此内容 (%s ) 可能会缩短电池的使用时间并/或导致过量使用移动数据连接流量（这可能导致移动运营商向您收费，具体取决于您的流量套餐）。

触摸“%s”可在下次连接到 WLAN 网络时开始下载此内容。"</string>
    <string name="button_queue_for_wifi">排队</string>
    <string name="button_cancel_download">取消</string>
    <string name="button_start_now">立即开始</string>
    <string name="download_percent">%d%%</string>
    <string name="download_remaining">剩余时间：%s</string>
    <string name="download_no_application_title">无法打开文件</string>
    <string name="duration_seconds">%d 秒</string>
    <string name="duration_minutes">%d 分钟</string>
    <string name="duration_hours">%d 小时</string>
    <string name="detail_download">立即下载</string>
    <string name="detail_download_pause">暂停</string>
    <string name="detail_download_resume">继续</string>
    <string name="detail_download_install">立即安装</string>
    <string name="detail_download_open">立即打开</string>
    <string name="detail_download_restart">重新下载</string>
    <string name="social_friend_title">好友</string>
    <string name="social_add_title">添加好友</string>
    <string name="social_block_title">黑名单</string>
    <string name="social_invite_title">邀请好友</string>
    <string name="social_friend_add">添加</string>
    <string name="social_add_invite">邀请</string>
    <string name="social_friend_following">关注(%1$d)</string>
    <string name="social_friend_follower">粉丝(%1$d)</string>
    <string name="social_invite_can_invite">告诉TA</string>
    <string name="social_invite_has_invited">已发送</string>
    <string name="social_invite_fail_invited">发送失败</string>
    <string name="social_error_login">点此登录</string>
    <string name="social_error_add_friend">添加好友</string>
    <string name="social_error_invite_friend">邀请好友</string>
    <string name="social_error_try_refresh">刷新试试</string>
    <string name="social_toast_no_network">请检查网络连接</string>
    <string name="social_toast_fail_action">操作失败，稍后再试</string>
    <string name="social_toast_fail_invite">邀请失败，稍后再试</string>
    <string name="social_toast_fail">获取失败，稍后再试</string>
    <string name="social_toast_try_login">请重新登录</string>
    <string name="social_toast_has_logined">您已经登录</string>
    <string name="social_toast_action_try_login">请先登录</string>
    <string name="social_homepage_toast_error_network">网络不太给力,请稍后重试</string>
    <string name="social_homepage_toast_error_server">获取用户信息失败,请稍后重试</string>
    <string name="ugc_toast_publish_success">提交成功. 正接受网友审核</string>
    <string name="ugc_toast_bar_publish_success">成功提交到%1$s吧</string>
    <string name="ugc_toast_publish_no_network">没有网络连接,内容已自动保存, 请稍后再提交</string>
    <string name="ugc_toast_session_expired">登录已过期,请重新登录</string>
    <string name="ugc_toast_publish_commiting">提交中…</string>
    <string name="ugc_toast_setting_need_login">请先登录</string>
    <string name="social_add_item_is_sns">已使用今日头条的好友</string>
    <string name="social_add_item_not_sns">他们也在使用今日头条</string>
    <string name="social_homepage_button_activity">动态</string>
    <string name="social_homepage_button_favorite">收藏</string>
    <string name="social_homepage_button_message">消息</string>
    <string name="social_homepage_button_comment">评论</string>
    <string name="social_homepage_fan">粉丝</string>
    <string name="social_homepage_follow">关注</string>
    <string name="social_homepage_recommand">订阅</string>
    <string name="social_friend_my_friend">我的好友</string>
    <string name="social_friend_ta_friend">Ta的好友</string>
    <string name="social_update_names">等%1$d人 </string>
    <string name="social_profile_action_edit">编辑</string>
    <string name="social_profile_action_relogin">重新登录</string>
    <string name="social_profile_action_follow">+ 关注</string>
    <string name="social_profile_action_unfollow">已关注</string>
    <string name="social_profile_action_bothfollow">互相关注</string>
    <string name="ugc_dialog_publish_timeout">网络不给力，需要重试吗？</string>
    <string name="ugc_dialog_publish_server_error">后台服务繁忙，需要重试吗？</string>
    <string name="report_activity_input_hint">请仔细填写，以确保举报能够被处理</string>
    <string name="report_activity_toast_selected_none">请至少选择一种类型</string>
    <string name="report_activity_toast_none_input">输入内容不能为空</string>
    <string name="report_activity_toast_success">举报成功</string>
    <string name="default_report_item_ad">垃圾广告</string>
    <string name="default_report_item_sexy">淫秽色情</string>
    <string name="default_report_item_fake">煽情骗顶</string>
    <string name="default_report_item_old">以前看过</string>
    <string name="default_report_item_copy">抄袭我的内容</string>
    <string name="default_report_item_other">其他</string>
    <string name="title_report">举报</string>
    <string name="new_hint">新加入</string>
    <string name="ss_name">享评</string>
    <string name="ss_back">返回</string>
    <string name="ss_top_hint">写点评论吧</string>
    <string name="ss_share_hint">期待你的神评论</string>
    <string name="ss_write_comment_hint">在此输入您要发布的评论</string>
    <string name="ss_tip_select_platform">点击图标选择您要绑定的平台</string>
    <string name="ss_pname_weibo">新浪微博</string>
    <string name="ss_pname_tencent">腾讯微博</string>
    <string name="ss_pname_renren">人人网</string>
    <string name="ss_pname_qzone">腾讯QQ</string>
    <string name="ss_pname_kaixin">开心网</string>
    <string name="ss_pname_weixin">微信</string>
    <string name="info_drawer_profile_agree">我同意</string>
    <string name="info_drawer_profile_deal">《内涵段子用户使用协议》</string>
    <string name="essay_tab_recent">热门</string>
    <string name="essay_tab_hot">精华</string>
    <string name="essay_tab_recommend">推荐</string>
    <string name="essay_tab_origin">新鲜</string>
    <string name="app_copyright">© 头条出品 toutiao.com</string>
    <string name="setting_recommend">精彩推荐</string>
    <string name="setting_font_size">字体大小</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_load_image">2G/3G图片显示模式</string>
    <string name="setting_notify">精彩内容推送</string>
    <string name="setting_share_when_favor">收藏同时转发</string>
    <string name="setting_auto_play_gif">4G/Wi-Fi动图自动播放</string>
    <string name="setting_auto_play_video">视频自动播放</string>
    <string name="setting_save_position">保存浏览进度</string>
    <string name="setting_night_mode">夜间模式</string>
    <string name="setting_feedback">用户反馈</string>
    <string name="setting_contact_us">联系我们</string>
    <string name="setting_use_help">帮助</string>
    <string name="setting_user_license">用户使用协议</string>
    <string name="setting_reset_app_guide">Be an freshman?</string>
    <string name="setting_location_publish">地理位置公开</string>
    <string name="menu_entry_recommend">推荐给朋友</string>
    <string name="update">检查新版本</string>
    <string name="setting_load_image_always">大图</string>
    <string name="setting_load_image_wifi">小图</string>
    <string name="setting_load_image_never">无图</string>
    <string name="setting_font_small">小</string>
    <string name="setting_font_medium">中</string>
    <string name="setting_font_large">大</string>
    <string name="action_copy">复制</string>
    <string name="reply">回复</string>
    <string name="pm_toobar_report">举报</string>
    <string name="pm_toobar_add_blacklist">加入黑名单</string>
    <string name="pm_toobar_delete">删除</string>
    <string name="who_can_send_msg">谁可以给我发悄悄话</string>
    <string name="pm_push">悄悄话推送</string>
    <string name="comment_delete">删除</string>
    <string name="setting_event_host">事件发送主机:</string>
    <string name="event_host_hint">127.0.0.1:10304</string>
</resources>