<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:background="?pm_more_dialog_bg" android:paddingTop="40.0dip" android:paddingBottom="45.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/pm_toolbar_report" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pm_toobar_report" android:drawableTop="?pm_report_friend" android:drawablePadding="8.0dip" android:layout_weight="1.0" style="@style/pm_more_action_text" />
        <TextView android:id="@id/pm_toolbar_add_blacklist" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pm_toobar_add_blacklist" android:drawableTop="?pm_black_friend" android:drawablePadding="8.0dip" android:layout_weight="1.0" style="@style/pm_more_action_text" />
        <TextView android:gravity="center" android:id="@id/pm_toolbar_delete" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pm_toobar_delete" android:drawableTop="?pm_delete_session" android:drawablePadding="8.0dip" android:layout_weight="1.0" style="@style/pm_more_action_text" />
    </LinearLayout>
    <TextView android:textSize="20.0sp" android:textColor="?pm_more_dialog_cancel" android:gravity="center" android:id="@id/cancel" android:background="?pm_more_dialog_cancel_bg" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/cancel" />
</LinearLayout>